--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   
-<div id="carouselExample" class="carousel slide">
+<div id="carouselExample" class="carousel-slide">
   <div class="carousel-inner">
     <div class="carousel-item active" style="background-color: red;">
       <img src="..." class="d-block w-100" alt="...">
