--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
 </head>
 
 <body>
-  
-<div id="carouselExample" class="carousel-slide" data-ride="carousel">
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active" style="background-color: red;">
-      <img src="..." class="d-block w-100" alt="...">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="..." alt="First slide">
     </div>
-    <div class="carousel-item" style="background-color: yellow;">
-      <img src="..." class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
     </div>
-    <div class="carousel-item" style="background-color: blue;">
-      <img src="..." class="d-block w-100" alt="...">
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
     </div>
   </div>
-  
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
+    <span class="sr-only">Next</span>
+ </a>
 </div>
 </body>
