--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
- <div id="carouselExample" class="carousel slide">
+ <div id="carouselExampleSlidesOnly" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active" style="background-color: red; data-interval="carousel" data-interval="1000">
       <img src="..." class="d-block w-100" alt="...">
