--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
- <div id="carouselExampleSlidesOnly" class="carousel slide">
+ <div id="carouselExample" class="carousel slide" data-ride="false">
   <div class="carousel-inner">
-    <div class="carousel-item active" style="background-color: red; data-interval="carousel" data-interval="1000">
+    <div class="carousel-item active" style="background-color: red";>
       <img src="..." class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" style="background-color: yellow;">
