--- a/index.html
+++ b/index.html
@@ -3,30 +3,36 @@
 <head>
   <meta charset="utf-8">
   <title>Carousel</title>
+  
   <link rel="stylesheet" href="carousel/styles.css">
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  
 </head>
 
 <body>
- <div id="carouselExample" class="carousel slide" data-ride="false">
+ <div id="testimonial-carousel" class="carousel slide" data-ride="false">
   <div class="carousel-inner">
-    <div class="carousel-item active" style="background-color: red";>
-      <img src="..." class="d-block w-100" alt="...">
+    <div class="carousel-item active" style="background-color: red;">
+      <h1>Hello <i>spata</i></h1>
     </div>
     <div class="carousel-item" style="background-color: yellow;">
-      <img src="..." class="d-block w-100" alt="...">
+      <h1>Hello <i>eromoy</i></h1>
     </div>
     <div class="carousel-item" style="background-color: blue;">
-      <img src="..." class="d-block w-100" alt="...">
+      <h1>Hello <i>spata eromoy</i></h1>
     </div>
   </div>
   
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
+  <button class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+    
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
+  <button class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+    
   </button>
 </div>
 </body>
