--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
- <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+ 
+  <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" style="background-color: red;">
       <h1>Hello <i>spata</i></h1>
@@ -26,13 +27,14 @@
     </div>
   </div>
   
-  <button class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+   <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon"></span>
     
-  </button>
-  <button class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+  </a>
+  <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
     <span class="carousel-control-next-icon"></span>
     
-  </button>
-</div>
+  </a>
+  </div>
+
 </body>
