--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" style="background-color: red;">
-      <h1>Hello <i>spata</i></h1>
+      <h1>Helloooo <i>Watch Out</i></h1>
     </div>
     <div class="carousel-item" style="background-color: yellow;">
-      <h1>Hello <i>eromoy</i></h1>
+      <h1><i>The life Changing spata App is Coming Soon</i></h1>
     </div>
     <div class="carousel-item" style="background-color: blue;">
-      <h1>Hello <i>spata eromoy</i></h1>
+      <h1><i>spata...spata...spata</i></h1>
     </div>
   </div>
   
