--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Carousel</title>
+  <title>spata APP</title>
+
+<!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
   
 <!--   CSS Style Sheets -->
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
