--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>spata APP</title>
+  <title><em>spata</em> APP</title>
 
 <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
@@ -28,7 +28,7 @@
     <div class="carousel-item" style="background-color: yellow;">
       <h1><i>The life Changing spata App is Coming Soon</i></h1>
     </div>
-    <div class="carousel-item" style="background-color: blue;">
+    <div class="carousel-item" style="background-color: pink;">
       <h1><i>spata...spata...spata</i></h1>
     </div>
   </div>
