--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title><em>spata</em> APP</title>
+  <title>spata APP</title>
 
 <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
