--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 <!--   CSS Style Sheets -->
   <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="carousel/styles.css">
+  <link rel="stylesheet" href="styles.css">
  
 <!--   Bootstrap Link  -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
