--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <h1>Helloooo <i>Watch Out</i></h1>
     </div>
     <div class="carousel-item" style="background-color: yellow;">
-      <h1><i>The life Changing spata App is Coming Soon</i></h1>
+      <h1><i>The life Changing spata App is Coming Soon...</i></h1>
     </div>
     <div class="carousel-item" style="background-color: pink;">
-      <h1><i>spata...spata...spata</i></h1>
+      <h1><i>spata...spata...spata<br>spata...spata...spata<br>spata...spata...spata</i></h1>
     </div>
   </div>
   
