--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  
   
     <div class="carousel-item" style="background-color: pink;">
-      <h1><i>spata...spata...spata<br>spata...spata...spata<br>spata...spata...spata</i></h1>
+      <h1><i>spata spata spata spata spata spata spata spata spata</i></h1>
     </div>
   </div>
 
