--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
    
-    <div class="carousel-item active" style="background-color: red;">
+    <div class="carousel-item active" style="background-color: #16FF00;">
       <h1>Helloooo <i>Watch Out</i></h1>
     </div>
     
