--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
    
-    <div class="carousel-item active" style="background-color: #16FF00;">
+    <div class="carousel-item active" style="background-color: #000000;">
       <h1>Helloooo <i>Watch Out</i></h1>
     </div>
     
     
-    <div class="carousel-item" style="background-color: yellow;">
+    <div class="carousel-item" style="background-color: #0F6292;">
       <h1><i>The life Changing spata App is Coming Soon...</i></h1>
     </div>
  
   
-    <div class="carousel-item" style="background-color: pink;">
+    <div class="carousel-item" style="background-color: #A7727D;">
       <h1><i>spata spata spata spata spata spata spata spata spata</i></h1>
     </div>
   </div>
